<resources>

    <string name="app_name">Studiportal</string>
    <string name="menu_check_now">Jetzt überprüfen</string>
    <string name="menu_preferences">Einstellungen</string>
    <string name="menu_open_online">Studiportal online öffnen</string>
    <string name="menu_search">Prüfung suchen</string>
    <string name="preference_notify_about_change">preference_notify_about_change</string>
    <string name="preference_refresh_rate">refersh</string>
    <string name="preference_show_grade_in_notification">preference_show_grade_in_notification</string>
    <string name="preference_user">user</string>
    <string name="preference_use_mobile">use_mobile_network</string>
    <string name="preference_logout">logout</string>
    <string name="preference_password">password</string>
    <string name="preference_last_studiportal_data">last_studiportal_data</string>
    <string name="preference_refresh_settings">refresh_settings</string>
    <string name="preference_last_check">last_check</string>
    <string name="preference_refresh_is_overdue">refresh_overdue</string>
    <string name="exception_no_user_password">Benutzer oder Passwort nicht eingetragen</string>
    <string name="exception_wrong_user_password">Benutzer oder Passwort falsch</string>
    <string name="exception_wrong_user_password_long">Der Benutzer oder das Passwort scheint ungültig zu sein.\n\nWenn du sicher bist das alles stimmt probiere es in ein paar Minuten nochmals, leider spinnt das Studiportal gelegentlich&#8230;</string>
    <string name="exception_general">Fehler beim Verbinden mit Studiportal</string>
    <string name="text_new_data_title">Neue Noten eingetragen</string>
    <string name="text_new_data_detail">Berühren, um Studiportal zu öffnen</string>
    <string name="text_touch_to_show_grade">Berühren, um Note zu sehen</string>
    <string name="text_close">Schließen</string>
    <string name="text_bonus">Bonus</string>
    <string name="text_no_ects">Keine ECTS</string>
    <string name="text_malus">Malus</string>
    <string name="text_ects">ECTS</string>
    <string name="text_show_password">Passwort anzeigen</string>
    <string name="text_state_resignated">Zurückgetreten</string>
    <string name="text_state">Status</string>
    <string name="text_semester">Semester</string>
    <string name="text_note">Vermerk</string>
    <string name="text_grade">Note</string>
    <string name="text_attempt">Versuch</string>
    <string name="text_practical_work">Praktikum / Vorleistung</string>
    <string name="text_be">Bestanden</string>
    <string name="text_an">Angemeldet</string>
    <string name="text_nb">Nicht bestanden</string>
    <string name="text_en">Endgültig nicht bestanden</string>
    <string name="text_gr">Genehmigter Rücktritt</string>
    <string name="text_u">Unentschuldigter Rücktritt</string>
    <string name="text_vf">Prüfungsvorleistung fehlt</string>
    <string name="text_k">Krankheit</string>
    <string name="text_sa">Studium abgebrochen</string>
    <string name="text_error">Fehler</string>
    <string name="text_last_updated">Letzte Aktualisierung:&#x00A0;</string>
    <string name="text_enter_user_password">Du musst deinen Login-Daten eingeben, bevor du dich anmelden kannst.</string>
    <string name="text_user_name">HFU Benutzername</string>
    <string name="text_password">Passwort</string>
    <string name="text_login">Einloggen</string>
    <string name="text_logout_dialog">Willst du dich wirklich ausloggen?</string>
    <string name="text_placeholder">Lorem ipsum</string>
    <string name="text_cancel">Abbrechen</string>
    <string name="text_check_login">Überprüfe Login-Daten</string>
    <string name="text_refresh">Überprüfe Studiportal</string>
    <string name="text_logging_in">Einloggen&#8230;</string>
    <string name="text_connecting">Verbinden&#8230;</string>
    <string name="text_logging_out">Ausloggen&#8230;</string>
    <string name="text_checking_update">Nach Änderungen suchen&#8230;</string>
    <string name="text_no_change">Keine neuen Daten</string>
    <string name="text_search_result">Suchergebnisse</string>
    <string name="text_activity_login_title">Studiportal Login</string>
    <string name="text_activity_preferences_title">Einstellungen</string>
    <string name="text_search_hint">Prüfungsname</string>
    <string name="preferences_logout_title">Ausloggen</string>
    <string name="preferences_login_data_summary">Trage hier deine HFU-Login Daten ein</string>
    <string name="preferences_login_data_title">Login Daten</string>
    <string name="preferences_refresh_time">Aktualisierungsintervall</string>
    <string name="preferences_refresh_on_mobile">Über Mobilfunknetz aktualisieren</string>
    <string name="preferences_refresh_on_mobile_summary">Für die Aktualisierung über Mobilfunk können Gebühren anfallen</string>
    <string name="preferences_refresh_title">Aktualisierung</string>
    <string name="preferences_about">Über</string>
    <string name="preferences_about_text">&#169; Christian Würthner (2014)\nAllgemeine Informatik\nHochschule Furtwangen University\n\nSourcecode auf GitHub:\nhttps://github.com/crysxd/Studiportal-Checker</string>
    <string name="preferences_other_title">Sonstiges</string>
    <string name="preferences_notification">Benachrichtigung</string>
    <string name="preferences_show_grade_title">Note in Benachrichtigung</string>
    <string name="preferences_show_grade_summary">Neue Noten werden direkt in der Benachrichtigung angezeigt</string>
    <string name="preferences_notify_about_change_summary">Bei Änderungen im Studiportal wird eine Benachrichtigung angezeigt</string>
    <string name="preferences_notify_about_change_title">Über Noten benachrichtigen</string>

    <string-array name="array_refresh_time">
        <item>2 Stunden</item>
        <item>3 Stunden</item>
        <item>6 Stunden</item>
        <item>12 Stunden</item>
        <item>24 Stunden</item>
        <item>Keine Aktualisierung</item>
    </string-array>
    <string-array name="array_refresh_time_key">
        <item>120</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1480</item>
        <item>525948766</item>
    </string-array>

    <dimen name="gap_default">16dp</dimen>
    <dimen name="gap_default_double">32dp</dimen>
    <dimen name="fap_margin">10dp</dimen>
    <dimen name="toolbar_elevation">4dp</dimen>

    <color name="color_main_style">#83B81A</color>
    <color name="color_main_style_dark">#ff668f15</color>
    <color name="color_action_mode_background">#ff0000</color>
    <color name="color_acent">#367248</color>
    <color name="color_activity_background">#e5e5e5</color>
    <color name="color_white">#ffffff</color>
    <color name="color_text_hint">#55000000</color>
    <color name="color_light_text">#aaa</color>
    <color name="text_shadow">#7F000000</color>

</resources>
