<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/preferences_login_data_summary"
        android:title="@string/preferences_login_data_title" >
        <Preference
            android:inputType="text"
            android:key="@string/preference_logout"
            android:title="@string/preferences_logout_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_notification" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_notify_about_change"
            android:summary="@string/preferences_notify_about_change_summary"
            android:title="@string/preferences_notify_about_change_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_show_grade_in_notification"
            android:summary="@string/preferences_show_grade_summary"
            android:title="@string/preferences_show_grade_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_refresh_title" >
        <ListPreference
            android:defaultValue="60"
            android:entries="@array/array_refresh_time"
            android:entryValues="@array/array_refresh_time_key"
            android:key="@string/preference_refresh_rate"
            android:title="@string/preferences_refresh_time" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_use_mobile"
            android:summary="@string/preferences_refresh_on_mobile_summary"
            android:title="@string/preferences_refresh_on_mobile" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_other_title" >
        <Preference
            android:summary="@string/preferences_about_text"
            android:title="@string/preferences_about" />
    </PreferenceCategory>

</PreferenceScreen>